@@ -153,6 +153,8 @@ public:
 
     QWidget *canvas() const;
 
+    KoPageLayout pageLayout() const;
+
     ScheduleManager *currentScheduleManager() const;
     long activeScheduleId() const;
     void setActiveSchedule( long id );
